# tmplt

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
src/: CMakeLists.txt  main.cpp  project.sln
src/project/: project.vcxproj
src/tests/: tests.vcxproj
